test/fail/issue-5336b.mo
//MOC-FLAG --default-persistent-actors
import Actor "issue-5336b/actor";

actor class Main() {};
